# GC-Laboratorio-4

./: CMakeLists.txt  README.md
src/: bmp_writer.h  fragment.h  gl.h  main.cpp  object.h  shaders.h  triangle.h  uniforms.h
